# OILSHIP

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .tool-versions  Anchor.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  package.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SUPPORT.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
cli/: README.md  pyproject.toml
cli/oilship_cli/: __init__.py  client.py  commands.py  config.py  dashboard.py  export.py  format.py  main.py  report.py  risk.py
cli/tests/: test_risk.py
docs/: architecture.md
programs/oilship/: Cargo.toml  README.md
programs/oilship/idl/: oilship.json
programs/oilship/src/: constants.rs  errors.rs  events.rs  guards.rs  instructions.rs  lib.rs  math.rs  state.rs
programs/oilship/tests/: integration.rs
sdk/: README.md  package.json  tsconfig.json
sdk/src/: analytics.ts  bps.ts  bridges.ts  client.ts  decoder.ts  errors.ts  escort.ts  events.ts  fixtures.ts  format.ts  index.ts  pda.ts  policy.ts  quote.ts  receipts.ts  risk.ts  routing.ts  simulator.ts  types.ts  utils.ts  version.ts  wreckFund.ts
sdk/tests/: escort.test.ts
watch/: Cargo.toml  README.md
watch/src/: admin_audit.rs  alerts.rs  backfill.rs  bridges.rs  config.rs  filters.rs  http_api.rs  indexer.rs  main.rs  metrics.rs  notifier.rs  publisher.rs  replay.rs  rpc.rs  scheduler.rs  score.rs  signals.rs  store.rs  types.rs
