[workspace]
resolver = "2"
members = [
    "programs/oilship",
    "watch",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["OILSHIP"]
repository = "https://github.com/OilShip/OILSHIP"
homepage = "https://oilship.xyz"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
