[workspace]
resolver = "2"
members = [
    "programs/oilship",
    "watch",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["OILSHIP core"]
license = "MIT"
repository = "https://github.com/OilShip/OILSHIP"
homepage = "https://oilship.xyz"
readme = "README.md"
rust-version = "1.78"
description = "OILSHIP. Convoy escort for Solana bridges. On-chain Wreck Fund with same-block payouts."
keywords = ["solana", "anchor", "bridge", "defi", "insurance"]
categories = ["cryptography::cryptocurrencies", "network-programming"]

[workspace.dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-program = "=1.18.26"
solana-sdk = "=1.18.26"
solana-client = "=1.18.26"
solana-transaction-status = "=1.18.26"
anchor-client = "0.30.1"
spl-token = { version = "4.0", features = ["no-entrypoint"] }
borsh = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1.39", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = 3

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
