[project]
name = "oilship-cli"
version = "0.1.0"
description = "OILSHIP command-line interface for operators and shareholders"
license = { text = "MIT" }
authors = [{ name = "OILSHIP" }]
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27",
  "rich>=13.7",
  "typer>=0.12",
]

[project.scripts]
oilship = "oilship_cli.main:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
