[package]
name = "oilship-watch"
version = "0.1.0"
edition = "2021"
description = "OILSHIP monitoring engine: bridge anomaly detection and risk scoring"
license = "MIT"
authors = ["OILSHIP"]

[[bin]]
name = "oilship-watch"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.39", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
dashmap = "6.0"
hex = "0.4"
sha2 = "0.10"
url = "2.5"
chrono = { version = "0.4", features = ["serde"] }
