[package]
name = "oilship-watch"
description = "OILSHIP monitoring engine. Bridge anomaly detection and risk scoring."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true

[[bin]]
name = "oilship-watch"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }
anchor-client = { workspace = true }
parking_lot = "0.12"
dashmap = "6.0"
hex = "0.4"
sha2 = "0.10"
url = "2.5"
chrono = { version = "0.4", features = ["serde"] }
