[package]
name = "oilship"
version = "0.1.0"
description = "OILSHIP on-chain program: bridge convoy escort, policies, Wreck Fund"
edition = "2021"
license = "MIT"
authors = ["OILSHIP"]

[lib]
crate-type = ["cdylib", "lib"]
name = "oilship"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-program = "1.18"
spl-token = { version = "4.0", features = ["no-entrypoint"] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
